# rust-snake-ai-ratatui

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: net-100-2.json  net-100-3.json  net-100.json  net.json
src/: agent.rs  configs.rs  game.rs  lib.rs  main.rs  nn.rs  pop.rs  sim.rs  utils.rs  viz.rs
