[package]
name = "snake-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = "0.26.2"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
